devops/base/citizen-portal/deploy.yaml
# Copyright 2021 The Province of British Columbia
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
---
kind: Service
apiVersion: v1
metadata:
  name: citizen-portal
  labels:
    app: citizen-portal
    component: web
spec:
  ports:
    - name: 80-tcp
      protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: citizen-portal
  name: citizen-portal
spec:
  selector:
    app: citizen-portal
  replicas: 3
  template:
    metadata:
      labels:
        app: citizen-portal
    spec:
      containers:
      - args:
        - nginx
        - -g
        - daemon off;
        image: image-registry.openshift-image-registry.svc:5000/0198bb-tools/citizen-portal:latest
        name: citizen-portal
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 50m
            memory: 128Mi
          requests:
            cpu: 20m
            memory: 64Mi
        volumeMounts:
          - name: nginx-config-vol
            mountPath: /opt/app-root/etc/nginx.default.d/default.conf
            subPath: default.conf
      restartPolicy: Always
      volumes:
        - name: config-vol
          configMap:
            name: citizen-portal-nginx-config
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - citizen-portal
      from:
        kind: ImageStreamTag
        namespace: 0198bb-tools
        name: citizen-portal:latest
    type: ImageChange
